# yap

./: .dvc  .gitignore  .gitmodules  Cargo.toml  README.md  f.rs  first_out.txt  migrations.sql  release.sh  rustfmt.toml  script.py  test.db
.github/: release.yml
.github/workflows/: ci.yml  release_packages.yml
.yap/: .config  local.db  logbook.db  lokbook.db
.yap/logbooks/data/: og-two.md.db  one.md.db  test.parquet.db  two.md.db
benches/: bench_main.rs
benches/benchmarks/: files_factory.rs  mod.rs  read_and_compress.rs
data/: og-two.md
db_schemas/: branch.sql
lsp/: Cargo.toml
lsp/src/: lib.rs
migrations/: 1_initial.sql  file_logbook.sql  master_logbook.sql
pipeline/: dvc.yaml  params.yaml
src/: cli.rs  compare.rs  config.rs  enums.rs  main.rs  remote.rs  server.rs  settings.rs  turso_client.rs  utils.rs  versioning.rs
src/data/: cli.rs  comparaison.rs  file.rs  mod.rs  models.rs  remote.rs  versioning.rs
src/documentation/: cli.rs  mod.rs  models.rs
src/knowbase/: engine.rs  file_handlers.rs  markdown_parser.rs  mod.rs  models.rs  todo.rs
src/repro/: cli.rs  mod.rs  models.rs
src/todo/: mod.rs
src/todo/goals/: cli.rs  mod.rs  models.rs  storage.rs
src/todo/projects/: cli.rs  mod.rs  models.rs  storage.rs
src/todo/tasks/: cli.rs  mod.rs  models.rs  storage.rs
src/todo/utils/: enums.rs  mod.rs  monitoring.rs  notifications.rs  storage.rs
src/todo/utils/cli/: args.rs  mod.rs  tools.rs
src/todo/utils/dialog/: cli.rs  mod.rs  zenity.rs
src/turso/: client.rs  databases.rs  groups.rs  locations.rs  mod.rs  organizations.rs
src/vcs/: cli.rs  comparaison.rs  file.rs  mod.rs  remote.rs  versioning.rs
