[package]
name = "yap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive", "env"] }
tokio = { version = "1.36.0", features = ["full"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
opendal = { version = "0.45.0", features = ["services-gcs", "rustls"] }
toml = "0.8.10"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.32"
shlex = "1.3.0"
tera = "1.19.1"
meowhash = "0.3.0"
libsql = "0.2.0"
libsql-client = "0.33.4"
menva = "1.0.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.114"
