[package]
name = "yap"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
menva = "1.0.0"
turso = { version = "0.1.0", path = "./turso-client" }
libsql = "0.2.0"
libsql-client = "0.33.4"
clap = { version = "4.5.1", features = ["derive", "env"] }
tokio = { version = "1.36.0", features = ["full"] }
opendal = { version = "0.45.0", features = ["services-gcs", "rustls"] }
toml = "0.8.10"
serde_yaml = "0.9.32"
shlex = "1.3.0"
meowhash = "0.3.0"
rayon = "1.9.0"
zstd = "0.13.0"
hex = "0.4.3"
chrono = "0.4.34"
