[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.6"
lsp-types = "0.95.0"
tree-sitter = "0.20.10"
tree-sitter-md = "0.1.7"
# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
